in progress of displaying today's wether info

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wether App</title>
         <link rel="stylesheet" href="style.css"/>
+        <script
+            type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+        ></script>
+
     </head>
     <body>
         <section class="header">
@@ -28,7 +33,7 @@
             </div>
 
             <div class="CurrentWether">
-                    money
+                    
             </div>
 
 
