--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <input id="CityName" type="text">
                 <button id = "SerchButton">Search</button>
 
+                <div class="searced-items">
+                    
+                </div>
+
 
 
 
